syntax = "proto3";

package invitation;

service InvitationService {
  rpc UnaryCall (HeroById) returns (Invitation);
}

message HeroById {
  int32 id = 1;
}

message Invitation {
  int32 id = 1;
  string name = 2;
}